# arm_5dof

./: CMakeLists.txt  README.ko.md  README.md  package.xml
arm_5dof_effort/: CMakeLists.txt  package.xml
arm_5dof_effort/launch/: gazebo_effort.launch.py
arm_5dof_effort/scripts/: drop_robot.py  gravity_comp_node.py  switch_to_effort.py  switch_to_position.py
config/: 5dof_arm.rviz  5dof_arm.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  move_group_params.yaml  moveit_controllers.yaml  ompl_planning.yaml
docs/superpowers/specs/: 2026-06-05-arm_5dof-ros2-repo-design.md
launch/: display.launch.py  full_demo.launch.py  moveit.launch.py  moveit_gazebo.launch.py
meshes/: base_link.stl  link0.stl  link1.stl  link2.stl  link3.stl  link4.stl
scripts/: gravity_comp_node.py  joint_slider.py  joint_state_relay.py
urdf/: 5dof_arm.urdf
