<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_5dof</name>
  <version>0.0.1</version>
  <description>5-DOF manipulator simulation (ROS2 + MoveIt2 + Gazebo).</description>
  <maintainer email="kingsosmrjmjm@gmail.com">Wjjajja</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>python3-kdl-parser-py</exec_depend>
  <exec_depend>python3-urdf-parser-py</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
