<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_5dof_effort</name>
  <version>0.0.1</version>
  <description>Position ↔ effort controller switching for arm_5dof (no MoveIt).</description>
  <maintainer email="kingsosmrjmjm@gmail.com">Wjjajja</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>arm_5dof</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>python3-kdl-parser-py</exec_depend>
  <exec_depend>python3-urdf-parser-py</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
